    - Disallow matching options by prefix. Fixes a regression since
      2.0.0~alpha1.
    - 'snapshot': implemented.
  * lib:
    - cache/binaryversion:
      - 'parseFromFile': 10-25% speed-up.
    - file:
      - 'getRecord': removed parameter 'accepter'.
    - system/resolver:
      - 'operator=': forbidden now.
      - Reorganized *Reason struct, transformed to struct hierarchy.
    - system/worker:
      - 'operator=': forbidden now.
      - 'markAsAutomaticallyInstalled': renamed to
        'setAutomaticallyInstalledFlag'.
      - 'deleteArchive': fixed possible directory traversal.
      - Implemented snapshot-related methods.
    - config:
      - Option 'cupt::resolver::max-solution-count': increased default value
        from 256 to 512.
      - Specified the 'quiet' option as '0' to make apt-listchanges work (a
        work-around for #604130).
      - New method 'getPath' for unified handling of path options.
      - New option 'cupt::directory'.
    - system/snapshots:
      - Implemented.
    - cache/relation:
      - All single-parameter constructors are now explicit.
  * debian:
    - rules:
      - Fixed installing bash completion script.
  * doc:
    - reference:
      - Documented dynamic library parts. All library is documented now.
    - cupt-experimental.1:
      - '--installed-only' works under 'shell' subcommand since 2.0.0~alpha1.

 -- Eugene Lyubimkin <jackyf@debian.org>  Tue, 16 Nov 2010 10:09:36 +0200

cupt2 (2.0.0~alpha2) UNRELEASED; urgency=low

  * console:
    - 'why': fixed infinite CPU and RAM usage when some of starting versions
      have a dependency cycle with any other version.
  * lib:
    - hashsums:
      - 'getStringHash': speed-up.
      - 'getStringHash': renamed to 'getHashOfString'.
      - 'getHashOfString': fixed crash on non-ASCII strings.
      - Use libgcrypt for hash computations.
    - cache:
      - Pre-parsing index files: really discard packages with broken package
        names.